Refactor compra and pedidos templates to improve readability and update variable names; adjust total cost calculation in pedidocontrolador and fix datasource password in application properties.

--- a/demo/src/main/resources/templates/pedidos.html
+++ b/demo/src/main/resources/templates/pedidos.html
@@ -53,7 +53,7 @@
                                         <th>Fecha Creacion</th>
                                         <th>Costo Total</th>
                                         <th>Estado</th>
-                                        <th>Empleado encargado</th>
+                                        <th>Empleado Encargado</th>
                                         <th>Detalle Pedido</th>
                                     </tr>
                                 </thead>
