--- a/demo/src/main/resources/templates/compra.html
+++ b/demo/src/main/resources/templates/compra.html
@@ -47,7 +47,7 @@
                                         <th>Fecha</th>
                                         <th>Costo Total</th>
                                         <th>Estado</th>
-                                        <th>Proveedor</th>
+                                        <th>Empleado Encargado</th>
                                         <th>Detalle Compra</th>
                                     </tr>
                                 </thead>
@@ -58,8 +58,7 @@
                                             th:text="'$' + ${#numbers.formatDecimal(compra.costoTotal, 1, 'COMMA', 2, 'POINT')}">
                                         </td>
                                         <td th:text="${compra.estado}">-</td>
-                                        <td
-                                            th:text="${compra.proveedor != null ? compra.proveedor.nombre_empresa : 'Sin proveedor'}">
+                                        <td th:text="${compra.usuario.nombreUsuario}">
                                             Sin proveedor</td>
                                         <td>
                                             <div class="top-actions">
@@ -241,6 +240,7 @@
                                 })
                                 .then(data => {
                                     if (data.success) {
+                                        alert("Compra exitosa!");
                                         window.location.href = "/Compras";
                                     } else {
                                         alert("Error al registrar la compra");
